# robot-mcp-server

./: Cargo.toml
.cursor/: mcp.json
src/: main.rs  mcp.rs
